Closed
Bug 221012
Opened 22 years ago
Closed 22 years ago
nsGNOMERegistry must not call gnome_program_init when embedded
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: bryner)
References
Details
Attachments
(1 file)
|
1.83 KB,
patch
|
blizzard
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0
Build Identifier:
When embedding mozilla in Epiphany, gnome_program_init is run twice; first from
Epiphany, and a second time from nsGNOMERegistry::Startup(), which sets the
application name to "Gecko".
Reproducible: Always
Steps to Reproduce:
From nsGNOMERegistry::Startup():
// Initialize GNOME, if it's not already initialized. It's not
// necessary to tell GNOME about our actual command line arguments.
char *argv[1] = { "gecko" };
_gnome_program_init("Gecko", "1.0", _libgnome_module_info_get(),
1, argv, NULL);
Despite the comment, gnome_program_init is called unconditionally.
Comment 1•22 years ago
|
||
Bryner, this is yours too.
Assignee: blizzard → bryner
Severity: normal → critical
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•22 years ago
|
||
This is a pretty serious problem. I'm not sure how to fix it.
gnome_program_init() does all sorts of things.
Blocks: gtk2
| Assignee | ||
Comment 3•22 years ago
|
||
Hm, my understanding from looking at how gnome_program_init works led me to
believe it wouldn't do that if the program was already initialized.
At any rate, we can fix this fairly easily. Patch coming up.
| Assignee | ||
Comment 4•22 years ago
|
||
check whether gnome_program_get() returns null; only call gnome_program_init()
if it does
| Assignee | ||
Updated•22 years ago
|
Attachment #133705 -
Flags: review?(blizzard)
Updated•22 years ago
|
Attachment #133705 -
Flags: review?(blizzard) → review+
| Assignee | ||
Comment 5•22 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•