Only call gnome_program_init() if it hasn't already been called (bug 221012). r=blizzard, not part of the default build.